src/css/math.less
.mathquill-rendered-math {
  font-variant: normal;
  font-weight: normal;
  font-style: normal;
  font-size: 115%;
  line-height: 1;

  * {
    -moz-box-sizing: content-box !important;
    -webkit-box-sizing: content-box !important;
    box-sizing: content-box !important;
  }

  .inline-block;
  .mq-non-leaf, .mq-scaled {
    .inline-block;
  }

  // TODO: dasherize non-symbola
  var, .mq-text, .mq-nonSymbola {
    font-family: @times;
    line-height: .9;
  }

  * {
    font-size: inherit;
    line-height: inherit;
    margin: 0;
    padding: 0;
    border-color: black;
    .user-select(none);
  }

  // TODO: what's the difference between these?
  .mq-empty {
    background: #ccc;
    &.mathquill-root-block {
      background: transparent;
    }
  }

  &.mq-empty {
    background: transparent;
  }


  .mq-text {
    font-size: 87%;
  }

  .mq-font {
    font: 1em @times;
    line-height: .9;

    * {
      font-family: inherit;
      font-style: inherit;
    }
  }

  // TODO [Han]: Why do we have to special-case .mq-font?
  b, b.mq-font {
    font-weight: bolder;
  }

  var, i, i.mq-font {
    font-style: italic;
  }

  big {
    font-size: 125%;
  }

  .mq-roman {
    font-style: normal;
  }

  .mq-sans-serif {
    
    font-family: @sans-serif;
  }

  .mq-monospace {
    font-family: @monospace;
  }

  .mq-overline {
    border-top: 1px solid black;
    margin-top: 1px;
  }
  .mq-underline {
    border-bottom: 1px solid black;
    margin-bottom: 1px;
  }

  ////
  // operators

  .mq-binary-operator {
    padding: 0 0.1em;
    .inline-block;
  }

  .mq-unary-operator {
    padding-left: 0.2em;
  }

  ////
  // ^, _
  // sup/sub
  sup, sub {
    position: relative;
    font-size: 90%;
    top: 0;

    .mq-binary-operator {
      padding: 0 .1em;
    }

    .mq-unary-operator {
      padding-left: .1em;
    }

    &.mq-int, &.mq-nthroot {
      font-size: 80%;
    }

    // special styles for fractions
    // within sup/sub.
    .mq-fraction {
      font-size: 70%;
      vertical-align: -0.4em;
    }

    .mq-numerator {
      padding-bottom: 0;
    }

    .mq-denominator {
      padding-top: 0;
    }
  }

  sup {
    vertical-align: .5em;
    &.mq-int, &.mq-nthroot {
      vertical-align: 0.8em
    }

    &.mq-nthroot {
      margin-right: -.6em;
      margin-left: .2em;
      min-width: .5em;
    }

    .mq-sup {
      vertical-align: bottom;
    }
  }

  sub {
    vertical-align: -.4em;

    &.mq-int {
      vertical-align: -.6em;
    }

    .mq-sub {
      vertical-align: top;
    }
  }

  ////
  // parentheses
  .mq-paren {
    padding: 0 .1em;
    vertical-align: bottom;
    -webkit-transform-origin: bottom center;
    -moz-transform-origin: bottom center;
    -ms-transform-origin: bottom center;
    -o-transform-origin: bottom center;
    transform-origin: bottom center;
  }

  .mq-array {
    vertical-align: middle;
    text-align: center;
  }

  .mq-array > span {
    display: block;
  }

  ////
  // non-italicized functions
  // like \sin, \cos, \ln, etc.
  .mq-un-italicized {
    font-family: @times;
    line-height: 1;
    font-style: normal;
  }
  var.mq-un-italicized.mq-last {
    padding-right: .2em;
  }

  ////
  // \frac
  // fractions
  .mq-fraction {
    font-size: 90%;
    text-align: center;
    vertical-align: -.5em;
    padding: 0 .2em;
  }

  // Firefox 2 (and older?) only
  // because display:inline-block is FUBAR in Gecko < 1.9.0
  .mq-fraction, .mq-large-operator, x:-moz-any-link {
    display: -moz-groupbox;
  }

  // Firefox 3+ (Gecko 1.9.0+)
  .mq-fraction, .mq-large-operator, x:-moz-any-link, x:default {
    display: inline-block;
  }

  .mq-numerator, .mq-denominator {
    display: block;
  }

  .mq-numerator {
    padding: 0 0.1em;
    margin-bottom: -0.1em;
  }

  .mq-denominator {
    border-top: 1px solid;
    float: right; // take out of normal flow to manipulate baseline
    width: 100%;
    padding: .1em .1em 0 .1em;
    margin-right: -.1em;
    margin-left: -.1em;
  }

  ////
  // \sqrt
  // square roots
  .mq-sqrt-prefix {
    padding-top: 0;
    position: relative;
    top: .1em;
    vertical-align: top;
    .transform-origin(top);
  }

  .mq-sqrt-stem {
    border-top: 1px solid;
    margin-top: 1px;
    padding-left: .15em;
    padding-right: .2em;
    margin-right: .1em;
  }

  .mq-large-operator {
    text-align: center;

    big {
      display: inline-block;
    }

    .mq-from, .mq-to  {
      display: block;
    }
    .mq-from, .mq-to  {
      font-size: 80%;
    }
    .mq-from {
      margin-top: -.1em;
      float: right; /* take out of normal flow to manipulate baseline */
      width: 100%;
    }
  }

  &, .mathquill-editable {
    cursor: text;
    font-family: @symbola;
  }
}

